--- a/Tic-Tac-Toe/Tic-Tac-Toe/Tic-Tac-Toe.csproj
+++ b/Tic-Tac-Toe/Tic-Tac-Toe/Tic-Tac-Toe.csproj
@@ -7,4 +7,9 @@
     <RootNamespace>Tic_Tac_Toe</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
