--- a/Tic-Tac-Toe/Tic-Tac-Toe/appsettings.json
+++ b/Tic-Tac-Toe/Tic-Tac-Toe/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=Tic_tac_toe;Username=postgres;Password=postgres"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
